--- a/package.json
+++ b/package.json
@@ -9,24 +9,27 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/drawer": "^6.6.2",
+    "@react-navigation/material-top-tabs": "^6.2.2",
+    "@react-navigation/native": "^6.1.2",
+    "@react-navigation/native-stack": "^6.9.8",
+    "axios": "^1.2.3",
     "expo": "~48.0.6",
+    "expo-checkbox": "~2.2.0",
+    "expo-document-picker": "~10.3.0",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.3",
+    "react-native-gesture-handler": "~2.9.0",
+    "react-native-image-slider-box": "^2.0.5",
+    "react-native-paper": "^5.5.0",
+    "react-native-reanimated": "~2.14.4",
     "react-native-root-siblings": "^4.1.1",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
+    "react-native-super-grid": "^4.4.3",
     "react-native-toast-message": "^2.1.5",
-    "react-native-gesture-handler": "~2.8.0",
-    "axios": "^1.2.3",
-    "@react-navigation/native": "^6.1.2",
-    "@react-navigation/native-stack": "^6.9.8",
-    "react-native-image-slider-box": "^2.0.5",
-    "expo-checkbox": "~2.2.0",
-    "@react-navigation/drawer": "^6.4.3",
-    "@react-navigation/material-top-tabs": "^6.2.2",
-    "expo-document-picker": "~10.3.0",
-    "react-native-paper": "^5.1.2"
+    "@react-native-material/core": "^1.3.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
