--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-native-screens": "~3.18.0",
     "react-native-super-grid": "^4.4.3",
     "react-native-toast-message": "^2.1.5",
-    "@react-native-material/core": "^1.3.7"
+    "@react-native-material/core": "^1.3.7",
+    "react-native-raw-bottom-sheet": "^2.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
