--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-material/core": "^1.3.7",
     "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/material-top-tabs": "^6.2.2",
     "@react-navigation/native": "^6.1.2",
@@ -23,14 +24,14 @@
     "react-native-gesture-handler": "~2.9.0",
     "react-native-image-slider-box": "^2.0.5",
     "react-native-paper": "^5.5.0",
+    "react-native-progress": "^5.0.0",
+    "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-reanimated": "~2.14.4",
     "react-native-root-siblings": "^4.1.1",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-super-grid": "^4.4.3",
-    "react-native-toast-message": "^2.1.5",
-    "@react-native-material/core": "^1.3.7",
-    "react-native-raw-bottom-sheet": "^2.2.0"
+    "react-native-toast-message": "^2.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
