--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
     "react": "18.2.0",
     "react-native": "0.71.3",
     "react-native-gesture-handler": "~2.9.0",
-    "react-native-image-slider-box": "^2.0.5",
+    "react-native-image-slider-box": "github:megamaxs1234/react-native-image-slider-box",
     "react-native-paper": "^5.5.0",
+    "react-native-paper-dates": "^0.15.1",
     "react-native-progress": "^5.0.0",
     "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-reanimated": "~2.14.4",
@@ -31,7 +32,9 @@
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-super-grid": "^4.4.3",
-    "react-native-toast-message": "^2.1.5"
+    "react-native-toast-message": "^2.1.5",
+    "react-native-webview": "11.18.1",
+    "expo-constants": "~13.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
