--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "react-native-super-grid": "^4.4.3",
     "react-native-toast-message": "^2.1.5",
     "react-native-webview": "11.18.1",
-    "expo-constants": "~13.1.1"
+    "expo-build-properties": "~0.4.1",
+    "expo-constants": "~13.1.1",
+    "@lyracom/react-native-sdk-payment-module": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
