--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "react-native-webview": "11.18.1",
     "expo-build-properties": "~0.4.1",
     "expo-constants": "~13.1.1",
-    "@lyracom/react-native-sdk-payment-module": "^1.0.0"
+    "@lyracom/react-native-sdk-payment-module": "^1.0.0",
+    "@react-native-async-storage/async-storage": "1.17.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
