--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@lyracom/react-native-sdk-payment-module": "^1.0.0",
+    "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-material/core": "^1.3.7",
     "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/material-top-tabs": "^6.2.2",
@@ -16,11 +18,14 @@
     "@react-navigation/native-stack": "^6.9.8",
     "axios": "^1.2.3",
     "expo": "~48.0.6",
+    "expo-build-properties": "~0.4.1",
     "expo-checkbox": "~2.2.0",
+    "expo-constants": "~13.1.1",
     "expo-document-picker": "~10.3.0",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.3",
+    "react-native-blob-util": "^0.17.3",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-image-slider-box": "github:megamaxs1234/react-native-image-slider-box",
     "react-native-paper": "^5.5.0",
@@ -31,13 +36,10 @@
     "react-native-root-siblings": "^4.1.1",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
+    "react-native-share": "^8.2.2",
     "react-native-super-grid": "^4.4.3",
     "react-native-toast-message": "^2.1.5",
-    "react-native-webview": "11.18.1",
-    "expo-build-properties": "~0.4.1",
-    "expo-constants": "~13.1.1",
-    "@lyracom/react-native-sdk-payment-module": "^1.0.0",
-    "@react-native-async-storage/async-storage": "1.17.11"
+    "react-native-webview": "11.18.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
