--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "expo": "~48.0.6",
     "expo-build-properties": "~0.4.1",
     "expo-checkbox": "~2.2.0",
+    "react-native-element-dropdown": "^2.5.3",
     "expo-constants": "~13.1.1",
     "expo-document-picker": "~10.3.0",
     "expo-status-bar": "~1.4.4",
