--- a/package.json
+++ b/package.json
@@ -20,13 +20,14 @@
     "expo": "~48.0.6",
     "expo-build-properties": "~0.4.1",
     "expo-checkbox": "~2.2.0",
-    "react-native-element-dropdown": "^2.5.3",
     "expo-constants": "~13.1.1",
     "expo-document-picker": "~10.3.0",
     "expo-status-bar": "~1.4.4",
+    "moment": "^2.29.4",
     "react": "18.2.0",
     "react-native": "0.71.3",
     "react-native-blob-util": "^0.17.3",
+    "react-native-element-dropdown": "^2.5.3",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-image-slider-box": "github:megamaxs1234/react-native-image-slider-box",
     "react-native-paper": "^5.5.0",
