--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/material-top-tabs": "^6.2.2",
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/native-stack": "^6.9.8",
+    "@react-navigation/stack": "^6.3.16",
     "axios": "^1.2.3",
     "expo": "~48.0.6",
     "expo-build-properties": "~0.4.1",
@@ -40,8 +41,9 @@
     "react-native-screens": "~3.18.0",
     "react-native-share": "^8.2.2",
     "react-native-super-grid": "^4.4.3",
+    "react-native-tab-view": "^3.5.1",
     "react-native-toast-message": "^2.1.5",
-    "react-native-webview": "11.18.1"
+    "react-native-pager-view": "6.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
