--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-element-dropdown": "^2.5.3",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-image-slider-box": "github:megamaxs1234/react-native-image-slider-box",
+    "react-native-pager-view": "6.1.2",
     "react-native-paper": "^5.5.0",
     "react-native-paper-dates": "^0.15.1",
     "react-native-progress": "^5.0.0",
@@ -42,8 +43,7 @@
     "react-native-share": "^8.2.2",
     "react-native-super-grid": "^4.4.3",
     "react-native-tab-view": "^3.5.1",
-    "react-native-toast-message": "^2.1.5",
-    "react-native-pager-view": "6.1.2"
+    "react-native-toast-message": "^2.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
