--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "eas-build-pre-install": "npm config set legacy-peer-deps true"
+
   },
   "dependencies": {
-    "@lyracom/react-native-sdk-payment-module": "^1.0.0",
     "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-material/core": "^1.3.7",
     "@react-navigation/drawer": "^6.6.2",
@@ -36,7 +37,7 @@
     "react-native-paper-dates": "^0.15.1",
     "react-native-progress": "^5.0.0",
     "react-native-raw-bottom-sheet": "^2.2.0",
-    "react-native-reanimated": "~2.14.4",
+    "react-native-reanimated": "~2.12.0",
     "react-native-root-siblings": "^4.1.1",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
