--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eas-build-pre-install": "npm config set legacy-peer-deps true"
-
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.17.11",
@@ -25,6 +24,7 @@
     "expo-constants": "~13.1.1",
     "expo-document-picker": "~10.3.0",
     "expo-status-bar": "~1.4.4",
+    "lottie-react-native": "^6.4.1",
     "moment": "^2.29.4",
     "react": "18.2.0",
     "react-native": "0.71.3",
