--- a/app.json
+++ b/app.json
@@ -20,6 +20,7 @@
       "bitcode": false
     },
     "android": {
+      "jsEngine": "hermes",
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
