--- a/package.json
+++ b/package.json
@@ -37,14 +37,15 @@
     "react-native-paper-dates": "^0.15.1",
     "react-native-progress": "^5.0.0",
     "react-native-raw-bottom-sheet": "^2.2.0",
-    "react-native-reanimated": "~2.12.0",
+    "react-native-reanimated": "2.14.4",
     "react-native-root-siblings": "^4.1.1",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-share": "^8.2.2",
     "react-native-super-grid": "^4.4.3",
     "react-native-tab-view": "^3.5.1",
-    "react-native-toast-message": "^2.1.5"
+    "react-native-toast-message": "^2.1.5",
+    "react-native-vector-icons": "^10.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
