--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "eas-build-pre-install": "npm config set legacy-peer-deps true"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-native-async-storage/async-storage": "1.21.0",
     "@react-native-material/core": "^1.3.7",
     "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/material-top-tabs": "^6.2.2",
@@ -18,29 +18,29 @@
     "@react-navigation/native-stack": "^6.9.8",
     "@react-navigation/stack": "^6.3.16",
     "axios": "^1.2.3",
-    "expo": "~48.0.6",
-    "expo-build-properties": "~0.4.1",
-    "expo-checkbox": "~2.2.0",
-    "expo-constants": "~13.1.1",
-    "expo-document-picker": "~10.3.0",
-    "expo-status-bar": "~1.4.4",
-    "lottie-react-native": "^6.4.1",
+    "expo": "^50.0.2",
+    "expo-build-properties": "~0.11.0",
+    "expo-checkbox": "~2.7.0",
+    "expo-constants": "~15.4.5",
+    "expo-document-picker": "~11.10.1",
+    "expo-status-bar": "~1.11.1",
+    "lottie-react-native": "6.5.1",
     "moment": "^2.29.4",
     "react": "18.2.0",
-    "react-native": "0.71.3",
+    "react-native": "0.73.2",
     "react-native-blob-util": "^0.17.3",
     "react-native-element-dropdown": "^2.5.3",
-    "react-native-gesture-handler": "~2.9.0",
+    "react-native-gesture-handler": "~2.14.0",
     "react-native-image-slider-box": "github:megamaxs1234/react-native-image-slider-box",
-    "react-native-pager-view": "6.1.2",
+    "react-native-pager-view": "6.2.3",
     "react-native-paper": "^5.5.0",
     "react-native-paper-dates": "^0.15.1",
     "react-native-progress": "^5.0.0",
     "react-native-raw-bottom-sheet": "^2.2.0",
-    "react-native-reanimated": "2.14.4",
+    "react-native-reanimated": "~3.6.0",
     "react-native-root-siblings": "^4.1.1",
-    "react-native-safe-area-context": "4.4.1",
-    "react-native-screens": "~3.18.0",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
     "react-native-share": "^8.2.2",
     "react-native-super-grid": "^4.4.3",
     "react-native-tab-view": "^3.5.1",
