--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-native-firebase/app": "^18.8.0",
+    "@react-native-firebase/messaging": "^18.8.0",
     "@react-native-material/core": "^1.3.7",
     "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/material-top-tabs": "^6.2.2",
@@ -22,7 +24,9 @@
     "expo-build-properties": "~0.11.0",
     "expo-checkbox": "~2.7.0",
     "expo-constants": "~15.4.5",
+    "expo-device": "~5.9.3",
     "expo-document-picker": "~11.10.1",
+    "expo-notifications": "~0.27.6",
     "expo-status-bar": "~1.11.1",
     "lottie-react-native": "6.5.1",
     "moment": "^2.29.4",
