--- a/app.json
+++ b/app.json
@@ -28,7 +28,9 @@
         "backgroundColor": "#ffffff"
       },
       "package": "com.lowjunkie.LTEAPP02",
-      "googleServicesFile": "./google-services.json"
+      "googleServicesFile": "./google-services.json",
+      "versionCode": 1102
+
     },
     "web": {
       "favicon": "./assets/favicon.png"
