--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
   "expo": {
     "name": "LTE-APP",
-    "slug": "LTE-APP02",
-    "version": "1.1.3",
+    "slug": "lte-app",
+    "version": "1.1.4",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
@@ -19,7 +19,7 @@
       "bundleIdentifier": "com.bwt.lte",
       "bitcode": false,
       "googleServicesFile": "./GoogleService-Info.plist",
-      "buildNumber": "5"
+      "buildNumber": "6"
     },
     "android": {
       "jsEngine": "hermes",
@@ -30,7 +30,6 @@
       "package": "com.lowjunkie.LTEAPP02",
       "googleServicesFile": "./google-services.json",
       "versionCode": 1103
-
     },
     "web": {
       "favicon": "./assets/favicon.png"
@@ -48,7 +47,7 @@
     ],
     "extra": {
       "eas": {
-        "projectId": "e82f1cce-006d-48f7-96fe-bb97b30cc686"
+        "projectId": "9aa6fcc9-3c25-4a54-9681-c044a5f4c914"
       }
     }
   }
